# NCHU-Artificial-Intelligent-Internet-of-Things-Application-and-Implementation

./: README.md
Homework 1/: hw1-1.ino  hw1-2.ino  hw1-3.ino
Homework 3/: addData.php  hw3.ino
Homework 5/: Logistic Regression.ipynb  interviewTestEven.csv  interviewTrain.csv
Homework 7/: .gitignore  README.md  app.py  requirements.txt
Homework 7/templates/: map.html
Project - Library Flow/: Procfile  README.md  pyproject.toml  requirements.txt  sql_app.db
Project - Library Flow/IOT/: Runtime.ino  scanning.h
Project - Library Flow/library_flow/: database.py  schemas.py
Project - Library Flow/server/: Procfile  README.md  pyproject.toml  requirements.txt  sql_app.db
Project - Library Flow/server/library_flow/: crud.py  database.py  main.py  models.py  schemas.py
Project - Library Flow/server/static/js/: index.js
Project - Library Flow/server/templates/: main.html
Project - Library Flow/templates/: main.html
