[tool.poetry]
name = "library-flow"
version = "0.1.0"
description = ""
authors = ["Tomy Hsieh <pypi@tomy.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
Jinja2 = "^3.0.1"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.18"
psycopg2 = "^2.9.1"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
